--- a/contracts/soulp-astroport-xyk/Cargo.toml
+++ b/contracts/soulp-astroport-xyk/Cargo.toml
@@ -18,6 +18,9 @@ cosmwasm-schema.workspace = true
 cosmwasm-std.workspace = true
 cw-storage-plus.workspace = true
 cw2.workspace = true
+cw20.workspace = true
+cw721.workspace = true
+prost.workspace = true
 schemars.workspace = true
 serde.workspace = true
 thiserror.workspace = true
