--- a/contracts/soulp-astroport-xyk/Cargo.toml
+++ b/contracts/soulp-astroport-xyk/Cargo.toml
@@ -25,6 +25,7 @@ schemars.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 
+impl = { path = "../../packages/impl" }
 test-utils = { path = "../../packages/test-utils" }
 
 [dev-dependencies]
