--- a/packages/impl/Cargo.toml
+++ b/packages/impl/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "soulp-api"
+name = "impl"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -14,6 +14,9 @@ cosmwasm-schema.workspace = true
 cosmwasm-std.workspace = true
 cw-storage-plus.workspace = true
 cw2.workspace = true
+cw20.workspace = true
+cw721.workspace = true
+prost.workspace = true
 schemars.workspace = true
 serde.workspace = true
 thiserror.workspace = true
